opam-version: "2.0"
name: "ocaml-variants"
version: "4.07.1+dev"
synopsis: "OCaml development version"
depends: [
  "ocaml" {= "4.07.1" & post}
  "base-unix" {post}
  "base-bigarray" {post}
  "base-threads" {post}
]
conflict-class: "ocaml-core-compiler"
flags: compiler
setenv: CAML_LD_LIBRARY_PATH = "%{lib}%/stublibs"
build: [
  ["./configure" "-prefix" prefix "-no-ocamldoc" "-flambda" "-xg"]
  [make "-j%{jobs}%" "world"]
  [make "-j%{jobs}%" "world.opt"]
  [make "-j%{jobs}%" "ocamlnat"]
]
install: [make "install"]
maintainer: "caml-list@inria.fr"
homepage: "https://ocaml.org"
bug-reports: "https://caml.inria.fr/mantis/"
authors: [
  "Xavier Leroy"
  "Damien Doligez"
  "Alain Frisch"
  "Jacques Garrigue"
  "Didier Rémy"
  "Jérôme Vouillon"
]
